# pandora

./: .gitignore  README.md  package-lock.json  package.json
.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  prerender-manifest.js  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
.next/cache/: .tsbuildinfo  next-server.js.nft.json
.next/server/: _sc_client_src_components_animate_features_js.js  app-paths-manifest.json  client-reference-manifest.js  client-reference-manifest.json  functions-config-manifest.json  middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  webpack-runtime.js
.next/server/app/: _not-found.js  _not-found.js.nft.json  _not-found.rsc  components.html  components.rsc  index.html  index.rsc  main.html  main.rsc  page.js  page.js.nft.json
.next/server/chunks/: 176.js  1972.js  206.js  214.js  2824.js  3429.js  3597.js  3896.js  4088.js  493.js  4974.js  5014.js  5335.js  5852.js  6077.js  6281.js  6361.js  6395.js  6810.js  7138.js  7341.js  7370.js  7582.js  7738.js  777.js  7974.js  8379.js  9440.js  9614.js
.next/server/pages/: 404.html  500.html  _document.js.nft.json  _error.js.nft.json
.next/static/YL8g3q84Wb5RfJa2yM5Tm/: _buildManifest.js
.next/static/chunks/: 1278-880f7e9eee4f3cc6.js  1359-ccae5c7ff7b274da.js  (+51 more)
public/nft/xpla/nft_contract/: Cargo.toml
public/nft/xpla/nft_contract/src/: lib.rs
src/: global.css
src/app/: layout.tsx  page.tsx
src/routes/: paths.ts
src/theme/: palette.ts  typography.ts
src/types/: home.ts
(+242 files in other folders)
