[package]
name = "hyperx_pandora_nft_contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "2.0.1"
cosmwasm-storage = "1.5.2"
schemars = "0.8.16"
serde = { version = "1.0.197", features = ["derive"] }
wasm-bindgen = "0.2"
